crates/icydb-core/tests/ui/db/executor/cannot_import_query_intent.stderr
error[E0603]: module `query` is private
 --> tests/ui/db/executor/cannot_import_query_intent.rs:1:21
  |
1 | use icydb_core::db::query::intent::Query;
  |                     ^^^^^  ------ module `intent` is not publicly re-exported
  |                     |
  |                     private module
  |
note: the module `query` is defined here
 --> src/db/mod.rs
  |
  | pub(crate) mod query;
  | ^^^^^^^^^^^^^^^^^^^^
