crates/icydb-core/tests/ui/db/executor/cannot_import_query_intent.rs
use icydb_core::db::query::intent::Query;

fn main() {}
